changes to navbar to fix issues with collapse and device screen size

--- a/assets/css/booking.css
+++ b/assets/css/booking.css
@@ -335,7 +335,7 @@ button:hover {
   .navbar-dark,
   .navbar-nav,
   .nav-link {
-    font-size: 80%;
+    font-size: 70%;
     letter-spacing: 0px;
   }
 
@@ -352,7 +352,7 @@ button:hover {
     }
 
   #navbarNav { 
-    font-size: 30%;
+    font-size: 20%;
   }
 
   .left-footer,
@@ -378,6 +378,7 @@ button:hover {
 
 /* settings for tablet size and pc/laptops */
 
+/*
 @media (min-width: 568px) {
     .name-item {
       display: flex;
@@ -385,3 +386,4 @@ button:hover {
       justify-content: space-between;
     }
 }
+*/
